--- a/src/modules/partition/partition.conf
+++ b/src/modules/partition/partition.conf
@@ -30,7 +30,7 @@
 #
 # Both quantities must be at least 32MiB, this is enforced by the EFI
 # spec. If minimum is not specified, it defaults to the recommended
-# size. Distro's that allow more user latitude can set the minimum lower.
+# size. Distros that allow more user latitude can set the minimum lower.
 efi:
     mountPoint:         "/boot/efi"
     recommendedSize:    300MiB
@@ -294,7 +294,7 @@ essentialMounts: [ "live-*", "control", "ventoy" ]
 
 # When enableLuksAutomatedPartitioning is true, this option will pre-check
 # encryption checkbox. This option is only usefull to help people to not forget
-# to cypher their disk when installing in enterprise (for exemple).
+# to cypher their disk when installing in enterprise (for example).
 #preCheckEncryption:    false
 
 # LVM support
