--- a/src/modules/welcome/welcome.conf
+++ b/src/modules/welcome/welcome.conf
@@ -1,4 +1,3 @@
-
 # SPDX-FileCopyrightText: no
 # SPDX-License-Identifier: CC0-1.0
 #
@@ -40,7 +39,8 @@ requirements:
 
     # To check for internet connectivity, Calamares does a HTTP GET
     # on this URL; on success (e.g. HTTP code 200) internet is OK.
-    # Use a privacy-respecting URL here, preferably in your distro's domain.
+    # Use a privacy-respecting URL here, preferably in your own
+    # distribution domain.
     #
     # The URL is only used if "internet" is in the *check* list below.
     internetCheckUrl:   http://example.com
