[bootloader] Add hybrid GRUB installation support
Some users may want to install their system in a way that it can be
booted with both BIOS and UEFI firmware. This requires installing both
BIOS and UEFI bootloaders. This commit adds the ability to do this
with GRUB.

--- a/src/modules/bootloader/bootloader.conf
+++ b/src/modules/bootloader/bootloader.conf
@@ -81,3 +81,6 @@ efiBootMgr: "efibootmgr"
 # to add another module to optionally install the fallback on those
 # boards that need it.
 installEFIFallback: true
+
+# Optionally install both BIOS and UEFI GRUB bootloaders.
+installHybridGRUB: false
