[partition] Add hybrid bootloader compatible partitioning mode
Some users may want to install their system in a way that it can be
booted with both BIOS and UEFI firmware. This requires installing both
BIOS and UEFI bootloaders. This commit adds the ability to
automatically partition a disk in a way that is compatible with this
setup.

--- a/src/modules/partition/partition.conf
+++ b/src/modules/partition/partition.conf
@@ -178,6 +178,13 @@ initialSwapChoice: none
 #
 # defaultPartitionTableType: msdos
 
+# Specify whether to create a partition table layout suitable for a hybrid
+# (BIOS + EFI) bootloader installation. This will prepend both bios-boot and
+# EFI system partitions to the partition layout, regardless of whether the
+# booted system uses BIOS or EFI firmware. Defaults to false.
+#
+# createHybridBootloaderLayout: false
+
 # Requirement for partition table type
 #
 # Restrict the installation on disks that match the type of partition
