--- a/src/modules/grubcfg/grubcfg.conf
+++ b/src/modules/grubcfg/grubcfg.conf
@@ -22,7 +22,7 @@ overwrite: false
 
 # If set to true, prefer to write files in /etc/default/grub.d/
 # rather than the single file /etc/default/grub. If this is set,
-# Calamares will write /etc/default/grub.d/00Calamares instead.
+# Calamares will write /etc/default/grub.d/00calamares.cfg instead.
 prefer_grub_d: false
 
 # If set to true, an **existing** setting for GRUB_DISTRIBUTOR is
