--- a/src/modules/users/users.conf
+++ b/src/modules/users/users.conf
@@ -105,8 +105,8 @@ doReusePassword: true
 # Possible values are:
 #  - true to display it
 #  - false to hide it
-# By default, this value is set to false.
-displayAutologin:   false
+# By default, this value is set to true.
+displayAutologin:   true
 
 # You can control the initial state for the 'autologin checkbox' here.
 # Possible values are:
